--- a/examples/4.0_imbalanced_classification.ipynb
+++ b/examples/4.0_imbalanced_classification.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Many times equal number of examples in classes is not possible. For that methods to deal with imbalanced data could be used. Methods are from package https://github.com/scikit-learn-contrib/imbalanced-learn. This is just example tutorial."
+    "Many times equal number of examples in classes is not possible. For that methods to deal with imbalanced data could be used. Methods are from package https://github.com/scikit-learn-contrib/imbalanced-learn. This is just example tutorial. Imblearn methods could not be used with FastText as this model takes only textual input not array/matrix."
    ]
   },
   {
@@ -181,7 +181,7 @@
    "source": [
     "cf_cv.train_save_metrics([('vect', CountVectorizer()),\n",
     "                          ('tfidf', TfidfTransformer()),\n",
-    "                           ('rand_samp',SMOTE(random_state=0)),\n",
+    "                           ('rand_samp',SMOTE(random_state=0)),#imblearn methors are before model\n",
     "                          ('clf', MultinomialNB(alpha=.01)),], \n",
     "                         'f1', \n",
     "                         'MultinomialNB_smote',\n",
